Adds a robust test environment

--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -12,13 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bd7793f0-3cb6-4f3a-b634-30533eb1a006",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "\n",
     "import time"
    ]
   },
@@ -34,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e5e59500-2ffe-44ef-a2b0-a9b0895dfcce",
    "metadata": {},
    "outputs": [],
@@ -46,13 +45,15 @@
     "from scipy.optimize import newton\n",
     "from scipy.optimize import root_scalar\n",
     "import sympy\n",
-    "from statistics import fmean as mean"
+    "from statistics import fmean as mean\n",
+    "from tabulate import tabulate"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "cd10f2ef-5d60-446f-a349-1e702c3dcf81",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "766e0ad8-fa6e-4706-a18e-db5b6db1e819",
    "metadata": {},
    "outputs": [],
@@ -91,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fb5f0a6f-0aa4-48ac-a329-5dc8e2d6e9de",
    "metadata": {},
    "outputs": [],
@@ -101,61 +102,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f7e88bc-8c97-485d-9b2d-cf75d8298e4b",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Helper Functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c51ac806-5d86-4925-a965-089895414e23",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "cb5ea106-08a1-47e6-9c13-3302d8ed1e4a",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# Generating Problem Instances"
+    "# Problem Instances"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "a5e26a27-d4bc-47fc-8704-c071fdd64b44",
    "metadata": {},
    "outputs": [],
    "source": [
     "from MulticastPackingInstance import MulticastPackingInstance"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ffeb6e0a-d4e8-4924-8b07-4ed69e91ff40",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "# Create (Reduced) LP"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c14efbe3-97bb-49db-adab-8bfb4861d495",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -181,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b560a10f-a7d0-4eb1-9e84-a761970c56c7",
    "metadata": {},
    "outputs": [],
@@ -202,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9f14c130-b52f-4d74-99a8-2dc2f0ce7b7e",
    "metadata": {},
    "outputs": [],
@@ -234,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d08d2954-ef5f-4283-9066-997203df81d4",
    "metadata": {},
    "outputs": [],
@@ -255,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "50d91be1-d397-42d3-b196-28640a9c39ab",
    "metadata": {},
    "outputs": [],
@@ -276,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2a5f0cb0-95cf-4bdb-8c94-b15086c08ff5",
    "metadata": {},
    "outputs": [],
@@ -348,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8789b6bc-d18c-42b9-a321-9635d849d964",
    "metadata": {},
    "outputs": [],
@@ -382,142 +345,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "921b188f-6b08-4c17-8291-93590181f8e4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BEGIN NEW TEST\n",
-      "Column Generation - 2-approx\n",
-      "Set parameter Username\n",
-      "0\n",
-      "lambda(x): 1.0\n",
-      "phi_t(x): 0.0\n",
-      "tolerance: 1.0\n",
-      "2\n",
-      "lambda(x): 0.6666666666666666\n",
-      "phi_t(x): -0.40546510810816444\n",
-      "tolerance: 0.0\n",
-      "\n",
-      "Average Time of Pure Column Generation Iteration with 2-approx block solver: 0.00542363333333314\n",
-      "\n",
-      "Column Generation - Exact\n",
-      "0\n",
-      "lambda(x): 1.0\n",
-      "phi_t(x): 0.0\n",
-      "tolerance: 1.0\n",
-      "5\n",
-      "lambda(x): 0.6666666666666666\n",
-      "phi_t(x): -0.40546510810816444\n",
-      "tolerance: 0.0\n",
-      "\n",
-      "Average Time of Pure Column Generation Iteration with an exact block solver: 0.005322099999999737\n",
-      "\n",
-      "Jansen-Zhang Algorithm\n",
-      "0\n",
-      "lambda(x): 1.0\n",
-      "phi_t(x): 0.141287145561784\n",
-      "tolerance: 0.92\n",
-      "100\n",
-      "lambda(x): 0.775740871856443\n",
-      "phi_t(x): -0.135234340006967\n",
-      "tolerance: 0.836491563178971\n",
-      "200\n",
-      "lambda(x): 0.667591503920206\n",
-      "phi_t(x): -0.248055826298516\n",
-      "tolerance: 0.134061746767725\n",
-      "300\n",
-      "lambda(x): 0.666763194321129\n",
-      "phi_t(x): -0.320791740195829\n",
-      "tolerance: 0.0581407374016145\n",
-      "400\n",
-      "lambda(x): 0.666780524761558\n",
-      "phi_t(x): -0.321185758671627\n",
-      "tolerance: 0.0496137152873965\n",
-      "500\n",
-      "lambda(x): 0.666757149731483\n",
-      "phi_t(x): -0.321482183701057\n",
-      "tolerance: 0.0442855834295864\n",
-      "540\n",
-      "lambda(x): 0.666768356847464\n",
-      "phi_t(x): -0.321582792072924\n",
-      "tolerance: 0.0416207907870043\n",
-      "\n",
-      "Average Time of Jansen-Zhang Algorithm Iteration: 0.08515682014787432\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "ec73d318-bce9-403e-add7-6bebcc6a3f46",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
-    "for i in range(1):\n",
-    "    print(\"BEGIN NEW TEST\")\n",
-    "    instance = MulticastPackingInstance(GlobalConstants.NUM_MULTICAST_REQUESTS, GlobalConstants.MAX_MULTICAST_SIZE)\n",
-    "    print(\"Column Generation - 2-approx\")\n",
-    "    CGsolver = PureColGenMcpSolver(instance=instance)\n",
-    "    CGtimer = list()\n",
-    "    while(not CGsolver.stop_flag):\n",
-    "        prev_time = time.perf_counter()\n",
-    "        CGsolver.perform_iteration()\n",
-    "        new_time = time.perf_counter()\n",
-    "        CGtimer.append(new_time - prev_time)\n",
-    "    print()\n",
-    "    print(\"Average Time of Pure Column Generation Iteration with 2-approx block solver: {}\".format(mean(CGtimer)))\n",
-    "    print()\n",
+    "instanceParameterList = [(1*GlobalConstants.NUM_NODES, \n",
+    "                          1*GlobalConstants.NUM_EDGES, \n",
+    "                          i*2*GlobalConstants.NUM_MULTICAST_REQUESTS, \n",
+    "                          i*GlobalConstants.MAX_MULTICAST_SIZE)\n",
+    "                             for i in range(1,3)]\n",
+    "numRepititions = 2\n",
+    "\n",
+    "tableHeaders = [\"Solver\", \n",
+    "                \"Block Apx Ratio\", \n",
+    "                \"Vertices\",\n",
+    "                \"Edges\",\n",
+    "                \"Requests\",\n",
+    "                \"Group Size\", \n",
+    "                \"Congestion\", \n",
+    "                \"Potential\",\n",
+    "                \"Iterations\",\n",
+    "                \"Total Time\",\n",
+    "                \"Avg. Time/It\"\n",
+    "               ]\n",
+    "\n",
+    "tableRows = list()\n",
+    "\n",
+    "for n,m,k,s in instanceParameterList:\n",
+    "    if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
+    "        print(\"Parameter Loop: {}, {}, {}, {}\".format(n,m,k,s))\n",
+    "    totalIter = {(apx, solver_id): list() \n",
+    "                 for apx in GlobalConstants.BLOCK_APPROX_LEVELS\n",
+    "                 for solver_id in GlobalConstants.SOLVER_ID_LIST}\n",
+    "    secsPerIt = {(apx, solver_id): list() \n",
+    "                        for apx in GlobalConstants.BLOCK_APPROX_LEVELS\n",
+    "                        for solver_id in GlobalConstants.SOLVER_ID_LIST}\n",
+    "    totalTime = {(apx, solver_id): list() \n",
+    "                 for apx in GlobalConstants.BLOCK_APPROX_LEVELS\n",
+    "                 for solver_id in GlobalConstants.SOLVER_ID_LIST}\n",
+    "    FinObjVal = {(apx, solver_id): list() \n",
+    "                 for apx in GlobalConstants.BLOCK_APPROX_LEVELS\n",
+    "                 for solver_id in GlobalConstants.SOLVER_ID_LIST}\n",
+    "    FinPotVal = {(apx, solver_id): list() \n",
+    "                 for apx in GlobalConstants.BLOCK_APPROX_LEVELS\n",
+    "                 for solver_id in GlobalConstants.SOLVER_ID_LIST}\n",
     "    \n",
-    "    print(\"Column Generation - Exact\")\n",
-    "    CGsolver2 = PureColGenMcpSolver(instance=instance, block_solver=\"Exact\")\n",
-    "    CGtimer2 = list()\n",
-    "    while(not CGsolver2.stop_flag):\n",
-    "        prev_time = time.perf_counter()\n",
-    "        CGsolver2.perform_iteration()\n",
-    "        new_time = time.perf_counter()\n",
-    "        CGtimer2.append(new_time - prev_time)\n",
-    "    print()\n",
-    "    print(\"Average Time of Pure Column Generation Iteration with an exact block solver: {}\".format(mean(CGtimer2)))\n",
-    "    print()\n",
-    "    \n",
-    "    print(\"Jansen-Zhang Algorithm\")\n",
-    "    JZsolver = JansenZhangMinMaxer(instance=instance)\n",
-    "    JZtimer = list()\n",
-    "    while(not JZsolver.stop_flag):\n",
-    "        prev_time = time.perf_counter()\n",
-    "        JZsolver.perform_iteration()\n",
-    "        new_time = time.perf_counter()\n",
-    "        JZtimer.append(new_time - prev_time)\n",
-    "    print()\n",
-    "    print(\"Average Time of Jansen-Zhang Algorithm Iteration: {}\".format(mean(JZtimer)))"
+    "    for i in range(numRepititions):\n",
+    "        if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
+    "            print(\"\\t Instance Repitition: {}\".format(i))\n",
+    "        instance =  MulticastPackingInstance(n,m,k,s)\n",
+    "        \n",
+    "        for apx in GlobalConstants.BLOCK_APPROX_LEVELS:\n",
+    "            for solver_id in GlobalConstants.SOLVER_ID_LIST:\n",
+    "                if solver_id == GlobalConstants.COLGEN_ID:\n",
+    "                    solver = PureColGenMcpSolver(instance=instance, block_solver=apx)\n",
+    "                elif solver_id == GlobalConstants.JZ2008_ID:\n",
+    "                    solver = JansenZhangMinMaxer(instance=instance, block_solver=apx)\n",
+    "                    \n",
+    "                if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
+    "                    print(\"\\t\\t Algo: {} \\t Block Approx: {}\".format(solver_id, apx))\n",
+    "                timer = list()\n",
+    "                while(not solver.stop_flag):\n",
+    "                    prev_time = time.perf_counter()\n",
+    "                    solver.perform_iteration()\n",
+    "                    new_time = time.perf_counter()\n",
+    "                    timer.append(new_time - prev_time)\n",
+    "                x = solver.solution[solver.iteration-1]\n",
+    "                totalIter[apx, solver_id].append(solver.iteration)\n",
+    "                secsPerIt[apx, solver_id].append(mean(timer))\n",
+    "                totalTime[apx, solver_id].append(sum(timer))\n",
+    "                FinObjVal[apx, solver_id].append(solver.lamb(x))\n",
+    "                FinPotVal[apx, solver_id].append(solver.phi(x, solver.t))\n",
+    "                \n",
+    "    avg_totalIter = dict()\n",
+    "    avg_secsPerIt = dict()\n",
+    "    avg_totalTime = dict()\n",
+    "    avg_FinObjVal = dict()\n",
+    "    avg_FinPotVal = dict()\n",
+    "    for apx in GlobalConstants.BLOCK_APPROX_LEVELS:\n",
+    "        for solver_id in GlobalConstants.SOLVER_ID_LIST:\n",
+    "            avgTotalIter = mean(totalIter[apx, solver_id])\n",
+    "            avgSecsPerIt = mean(secsPerIt[apx, solver_id])\n",
+    "            avgTotalTime = mean(totalTime[apx, solver_id])\n",
+    "            avgFinObjVal = mean(FinObjVal[apx, solver_id])\n",
+    "            avgFinPotVal = mean(FinPotVal[apx, solver_id])\n",
+    "            tableRows.append([solver_id, apx, n, m, k, s, \n",
+    "                              avgFinObjVal, avgFinPotVal, avgTotalIter, \n",
+    "                              avgTotalTime, avgSecsPerIt])\n",
+    "            \n",
+    "resultsTable = tabulate(tableRows, tableHeaders)\n",
+    "print(resultsTable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68f93d34-e0f8-4a56-96ff-1398757589a5",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Random Stuff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "id": "921b188f-6b08-4c17-8291-93590181f8e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for i in range(0):\n",
+    "#     print(\"BEGIN NEW TEST\")\n",
+    "#     instance = MulticastPackingInstance(GlobalConstants.NUM_MULTICAST_REQUESTS, GlobalConstants.MAX_MULTICAST_SIZE)\n",
+    "#     print(\"Column Generation - 2-approx\")\n",
+    "#     CGsolver = PureColGenMcpSolver(instance=instance)\n",
+    "#     CGtimer = list()\n",
+    "#     while(not CGsolver.stop_flag):\n",
+    "#         prev_time = time.perf_counter()\n",
+    "#         CGsolver.perform_iteration()\n",
+    "#         new_time = time.perf_counter()\n",
+    "#         CGtimer.append(new_time - prev_time)\n",
+    "#     print()\n",
+    "#     print(\"Average Time of Pure Column Generation Iteration with 2-approx block solver: {}\".format(mean(CGtimer)))\n",
+    "#     print()\n",
+    "    \n",
+    "#     print(\"Column Generation - Exact\")\n",
+    "#     CGsolver2 = PureColGenMcpSolver(instance=instance, block_solver=\"Exact\")\n",
+    "#     CGtimer2 = list()\n",
+    "#     while(not CGsolver2.stop_flag):\n",
+    "#         prev_time = time.perf_counter()\n",
+    "#         CGsolver2.perform_iteration()\n",
+    "#         new_time = time.perf_counter()\n",
+    "#         CGtimer2.append(new_time - prev_time)\n",
+    "#     print()\n",
+    "#     print(\"Average Time of Pure Column Generation Iteration with an exact block solver: {}\".format(mean(CGtimer2)))\n",
+    "#     print()\n",
+    "    \n",
+    "#     print(\"Jansen-Zhang Algorithm\")\n",
+    "#     JZsolver = JansenZhangMinMaxer(instance=instance)\n",
+    "#     JZtimer = list()\n",
+    "#     while(not JZsolver.stop_flag):\n",
+    "#         prev_time = time.perf_counter()\n",
+    "#         JZsolver.perform_iteration()\n",
+    "#         new_time = time.perf_counter()\n",
+    "#         JZtimer.append(new_time - prev_time)\n",
+    "#     print()\n",
+    "#     print(\"Average Time of Jansen-Zhang Algorithm Iteration: {}\".format(mean(JZtimer)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3ebe4db6-d562-409e-bbc4-a0285a3a84b1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'fracSolnCG' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_36324/2101478342.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfracSolnCG\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mroundedCG\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mT\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mz\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'fracSolnCG' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = fracSolnCG\n",
-    "z = roundedCG\n",
-    "for i in range(len(x)):\n",
-    "    for T in z[i]:\n",
-    "        print(T)\n",
-    "        print(z[i][T])\n",
-    "    for T in x[i]:\n",
-    "        print(T)\n",
-    "        print(x[i][T])\n"
+    "# x = fracSolnCG\n",
+    "# z = roundedCG\n",
+    "# for i in range(len(x)):\n",
+    "#     for T in z[i]:\n",
+    "#         print(T)\n",
+    "#         print(z[i][T])\n",
+    "#     for T in x[i]:\n",
+    "#         print(T)\n",
+    "#         print(x[i][T])"
    ]
   },
   {
@@ -527,15 +522,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fracSolnCG = CGsolver.solution[CGsolver.iteration-1]\n",
-    "fracSolnCG2 = CGsolver2.solution[CGsolver2.iteration-1]\n",
-    "#fracSolnJZ = MCPsolver.solution[MCPsolver.iteration-1]\n",
-    "roundedCG = randRounding(CGsolver)\n",
-    "roundedCG2 = randRounding(CGsolver2)\n",
-    "#roundedJZ = randRounding(JZsolver)\n",
-    "print(JZsolver.lamb(roundedCG))\n",
-    "print(JZsolver.lamb(roundedCG2))\n",
-    "#print(JZsolver.lamb(roundedJZ))"
+    "# fracSolnCG = CGsolver.solution[CGsolver.iteration-1]\n",
+    "# fracSolnCG2 = CGsolver2.solution[CGsolver2.iteration-1]\n",
+    "# #fracSolnJZ = MCPsolver.solution[MCPsolver.iteration-1]\n",
+    "# roundedCG = randRounding(CGsolver)\n",
+    "# roundedCG2 = randRounding(CGsolver2)\n",
+    "# #roundedJZ = randRounding(JZsolver)\n",
+    "# print(JZsolver.lamb(roundedCG))\n",
+    "# print(JZsolver.lamb(roundedCG2))\n",
+    "# #print(JZsolver.lamb(roundedJZ))"
    ]
   }
  ],
