Small refactor to solver interface
Small reformat to how we select column generation algorithm and how the iteration counter works.

--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -401,9 +401,9 @@
     "        for apx in GlobalConstants.BLOCK_APPROX_LEVELS:\n",
     "            for solver_id in GlobalConstants.SOLVER_ID_LIST:\n",
     "                if solver_id == GlobalConstants.COLGEN_ID:\n",
-    "                    solver = PureColGenMcpSolver(instance=instance, block_solver=apx)\n",
+    "                    solver = PureColGenMcpSolver(instance=instance, block_approx=apx)\n",
     "                elif solver_id == GlobalConstants.JZ2008_ID:\n",
-    "                    solver = JansenZhangMinMaxer(instance=instance, block_solver=apx)\n",
+    "                    solver = JansenZhangMinMaxer(instance=instance, block_approx=apx)\n",
     "                    \n",
     "                if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
     "                    print(\"\\t\\t Algo: {} \\t Block Approx: {}\".format(solver_id, apx))\n",
@@ -413,7 +413,7 @@
     "                    solver.perform_iteration()\n",
     "                    new_time = time.perf_counter()\n",
     "                    timer.append(new_time - prev_time)\n",
-    "                x = solver.solution[solver.iteration-1]\n",
+    "                x = solver.solution[solver.iteration]\n",
     "                totalIter[apx, solver_id].append(solver.iteration)\n",
     "                secsPerIt[apx, solver_id].append(mean(timer))\n",
     "                totalTime[apx, solver_id].append(sum(timer))\n",
@@ -474,7 +474,7 @@
     "#     print()\n",
     "    \n",
     "#     print(\"Column Generation - Exact\")\n",
-    "#     CGsolver2 = PureColGenMcpSolver(instance=instance, block_solver=\"Exact\")\n",
+    "#     CGsolver2 = PureColGenMcpSolver(instance=instance, block_approx=\"Exact\")\n",
     "#     CGtimer2 = list()\n",
     "#     while(not CGsolver2.stop_flag):\n",
     "#         prev_time = time.perf_counter()\n",
