Adds IP solver for MCP

--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "f643a7ef-453b-4a62-b9fe-5079c80aaac4",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -25,6 +26,7 @@
    "cell_type": "markdown",
    "id": "e735038d-1358-4c06-9b44-28fc1ed8e6e2",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -104,6 +106,7 @@
    "cell_type": "markdown",
    "id": "cb5ea106-08a1-47e6-9c13-3302d8ed1e4a",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -228,6 +231,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7c0bc9a0-8c21-4f9c-b10d-806f10bba8a5",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Integer Program (with Column Generation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "492f5480-4fba-45fb-8e7c-4cdc06d2c560",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ColGenIPSolver import ColGenIPSolver"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "64f0dcc7-9ebd-4df2-8717-568c1467d85b",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -303,6 +327,7 @@
    "cell_type": "markdown",
    "id": "0c3a46d2-79b4-4b31-96e5-43095d98b649",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -356,7 +381,7 @@
     "                          1*GlobalConstants.NUM_EDGES, \n",
     "                          i*2*GlobalConstants.NUM_MULTICAST_REQUESTS, \n",
     "                          i*GlobalConstants.MAX_MULTICAST_SIZE)\n",
-    "                             for i in range(1,3)]\n",
+    "                             for i in range(1,2)]\n",
     "numRepititions = 2\n",
     "\n",
     "tableHeaders = [\"Solver\", \n",
@@ -376,7 +401,7 @@
     "\n",
     "for n,m,k,s in instanceParameterList:\n",
     "    if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
-    "        print(\"Parameter Loop: {}, {}, {}, {}\".format(n,m,k,s))\n",
+    "        print(\"Parameter Loop: |V|={}, |E|={}, k={}, |S_i|<={}\".format(n,m,k,s))\n",
     "    totalIter = {(apx, solver_id): list() \n",
     "                 for apx in GlobalConstants.BLOCK_APPROX_LEVELS\n",
     "                 for solver_id in GlobalConstants.SOLVER_ID_LIST}\n",
@@ -400,10 +425,13 @@
     "        \n",
     "        for apx in GlobalConstants.BLOCK_APPROX_LEVELS:\n",
     "            for solver_id in GlobalConstants.SOLVER_ID_LIST:\n",
+    "            #for solver_id in [GlobalConstants.FULLIP_ID]:\n",
     "                if solver_id == GlobalConstants.COLGEN_ID:\n",
     "                    solver = PureColGenMcpSolver(instance=instance, block_approx=apx)\n",
     "                elif solver_id == GlobalConstants.JZ2008_ID:\n",
     "                    solver = JansenZhangMinMaxer(instance=instance, block_approx=apx)\n",
+    "                elif solver_id == GlobalConstants.FULLIP_ID:\n",
+    "                    solver = ColGenIPSolver(instance=instance, block_approx=apx)\n",
     "                    \n",
     "                if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
     "                    print(\"\\t\\t Algo: {} \\t Block Approx: {}\".format(solver_id, apx))\n",
@@ -531,6 +559,14 @@
     "# print(JZsolver.lamb(roundedCG))\n",
     "# print(JZsolver.lamb(roundedCG2))\n",
     "# #print(JZsolver.lamb(roundedJZ))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d79cc35-691a-4711-84d0-2912fadec324",
+   "metadata": {},
+   "source": [
+    "# End"
    ]
   }
  ],
