--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -66,6 +66,7 @@
    "cell_type": "markdown",
    "id": "62583b61-edf5-4ac7-9470-fe9bd2c7db39",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -86,6 +87,7 @@
    "cell_type": "markdown",
    "id": "a34056aa-f2e2-420e-98a4-cd3c76f94820",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -178,9 +180,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6298cf3d-ad88-4128-b4cb-23823f79cff2",
+   "id": "bf629526-c87b-4f5f-8740-94ad6d700a22",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Delay Constrained Steiner Tree IP Column Generator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "309b0009-8fd6-4e9a-a914-57f076147122",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ExactMcpWithDelayColumnGenerator import ExactMcpWithDelayColumnGenerator"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6298cf3d-ad88-4128-b4cb-23823f79cff2",
+   "metadata": {
     "tags": []
    },
    "source": [
@@ -377,12 +399,13 @@
    },
    "outputs": [],
    "source": [
-    "instanceParameterList = [(1*GlobalConstants.NUM_NODES, \n",
-    "                          1*GlobalConstants.NUM_EDGES, \n",
+    "instanceParameterList = [(i*GlobalConstants.NUM_NODES, \n",
+    "                          i*GlobalConstants.NUM_EDGES, \n",
     "                          i*2*GlobalConstants.NUM_MULTICAST_REQUESTS, \n",
-    "                          i*GlobalConstants.MAX_MULTICAST_SIZE)\n",
-    "                             for i in range(1,2)]\n",
-    "numRepititions = 2\n",
+    "                          i*GlobalConstants.MAX_MULTICAST_SIZE,\n",
+    "                          i*GlobalConstants.DELAY\n",
+    "                         ) for i in range(1,3)]\n",
+    "numRepititions = 3\n",
     "\n",
     "tableHeaders = [\"Solver\", \n",
     "                \"Block Apx Ratio\", \n",
@@ -390,6 +413,7 @@
     "                \"Edges\",\n",
     "                \"Requests\",\n",
     "                \"Group Size\", \n",
+    "                \"Max Delay\",\n",
     "                \"Congestion\", \n",
     "                \"Potential\",\n",
     "                \"Iterations\",\n",
@@ -399,9 +423,9 @@
     "\n",
     "tableRows = list()\n",
     "\n",
-    "for n,m,k,s in instanceParameterList:\n",
+    "for n,m,k,s,d in instanceParameterList:\n",
     "    if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
-    "        print(\"Parameter Loop: |V|={}, |E|={}, k={}, |S_i|<={}\".format(n,m,k,s))\n",
+    "        print(\"Parameter Loop: |V|={}, |E|={}, k={}, |S_i|<={}, D = {}\".format(n,m,k,s,d))\n",
     "    totalIter = {(apx, solver_id): list() \n",
     "                 for apx in GlobalConstants.BLOCK_APPROX_LEVELS\n",
     "                 for solver_id in GlobalConstants.SOLVER_ID_LIST}\n",
@@ -421,11 +445,10 @@
     "    for i in range(numRepititions):\n",
     "        if db.DEBUG_LEVEL >= db.DEBUG_LEVEL_THEORY_0:\n",
     "            print(\"\\t Instance Repitition: {}\".format(i))\n",
-    "        instance =  MulticastPackingInstance(n,m,k,s)\n",
+    "        instance =  MulticastPackingInstance(n,m,k,s,d)\n",
     "        \n",
     "        for apx in GlobalConstants.BLOCK_APPROX_LEVELS:\n",
     "            for solver_id in GlobalConstants.SOLVER_ID_LIST:\n",
-    "            #for solver_id in [GlobalConstants.FULLIP_ID]:\n",
     "                if solver_id == GlobalConstants.COLGEN_ID:\n",
     "                    solver = PureColGenMcpSolver(instance=instance, block_approx=apx)\n",
     "                elif solver_id == GlobalConstants.JZ2008_ID:\n",
@@ -460,7 +483,7 @@
     "            avgTotalTime = mean(totalTime[apx, solver_id])\n",
     "            avgFinObjVal = mean(FinObjVal[apx, solver_id])\n",
     "            avgFinPotVal = mean(FinPotVal[apx, solver_id])\n",
-    "            tableRows.append([solver_id, apx, n, m, k, s, \n",
+    "            tableRows.append([solver_id, apx, n, m, k, s, d,\n",
     "                              avgFinObjVal, avgFinPotVal, avgTotalIter, \n",
     "                              avgTotalTime, avgSecsPerIt])\n",
     "            \n",
