Changes to notebooks

--- a/MulticastPackingComputations.ipynb
+++ b/MulticastPackingComputations.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "02b9af15-cb82-4389-918b-a74535c58f64",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -103,6 +104,7 @@
    "cell_type": "markdown",
    "id": "c6e1903a-3df3-4905-81b1-28b56562cdea",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -113,6 +115,7 @@
    "cell_type": "markdown",
    "id": "64f0dcc7-9ebd-4df2-8717-568c1467d85b",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -218,6 +221,7 @@
    "cell_type": "markdown",
    "id": "4ec470be-3fa7-4c7e-915e-41b926677274",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -234,7 +238,8 @@
     "from RunExpirement import runExpirement\n",
     "datetime_str = datetime.now().strftime(\"%Y-%m-%d_%H_%M\")\n",
     "print(datetime_str)\n",
-    "tableHeaders = [\"Solver\", \n",
+    "tableHeaders = [\"Label\",\n",
+    "                \"Solver\", \n",
     "                \"Block Apx Ratio\", \n",
     "                \"Vertices\",\n",
     "                \"Edges\",\n",
@@ -252,7 +257,7 @@
     "        allWriter = csv.writer(allFile)\n",
     "        allWriter.writerow(tableHeaders)\n",
     "        \n",
-    "with open(\"outputs/summary_{}.csv\".format(datetime_str),'w') as sumFile:\n",
+    "with open(\"outputs/summaries/summary_{}.csv\".format(datetime_str),'w') as sumFile:\n",
     "        sumWriter = csv.writer(sumFile)\n",
     "        sumWriter.writerow(tableHeaders)"
    ]
@@ -266,35 +271,40 @@
    },
    "outputs": [],
    "source": [
-    "# paramList = [(5*GlobalConstants.NUM_NODES, \n",
-    "#               5*GlobalConstants.NUM_EDGES, \n",
-    "#               i,\n",
-    "#               5*GlobalConstants.MAX_MULTICAST_SIZE,\n",
-    "#               5*GlobalConstants.DELAY\n",
-    "#               ) for i in range(1, 52, 2)]\n",
-    "# paramList += [(5*GlobalConstants.NUM_NODES, \n",
-    "#                5*GlobalConstants.NUM_EDGES, \n",
-    "#                5*GlobalConstants.NUM_MULTICAST_REQUESTS, \n",
-    "#                i,\n",
-    "#                5*GlobalConstants.DELAY\n",
-    "#               ) for i in range(2, 5*GlobalConstants.NUM_NODES+1, 2)]\n",
+    "paramList = []\n",
+    "paramList += [(\"Requests\",\n",
+    "               3*GlobalConstants.NUM_NODES, \n",
+    "               3*GlobalConstants.NUM_EDGES, \n",
+    "               i,\n",
+    "               3*GlobalConstants.MAX_MULTICAST_SIZE,\n",
+    "               3*GlobalConstants.DELAY\n",
+    "              ) for i in range(1, 26, 3)]\n",
+    "paramList += [(\"Group Size\",\n",
+    "               3*GlobalConstants.NUM_NODES, \n",
+    "               3*GlobalConstants.NUM_EDGES, \n",
+    "               3*GlobalConstants.NUM_MULTICAST_REQUESTS, \n",
+    "               i,\n",
+    "               3*GlobalConstants.DELAY\n",
+    "              ) for i in range(2, 3*GlobalConstants.NUM_NODES+1, 5)]\n",
     "\n",
-    "paramList = [(50, # Nodes\n",
-    "             100, # Edges\n",
-    "               5, # Requests\n",
-    "               15, # Group Size\n",
-    "               0  # Delay\n",
-    "               ) for i in range(1, 2, 2) for j in range(5, 6, 5)]\n",
+    "paramList += [(\"Instance size\",\n",
+    "               2*i, # Nodes\n",
+    "               3*i, # Edges\n",
+    "               2*i, # Requests\n",
+    "                 i, # Group Size\n",
+    "                 0  # Delay\n",
+    "              ) for i in range(5, 51, 5) ]\n",
     "\n",
     "numReps = 1\n",
     "\n",
-    "solver = runExpirement(datetime_str, numReps, paramList, [ 1], [\"CG\"])[0]"
+    "solverList = runExpirement(datetime_str, numReps, paramList, [1, 2], [\"CG\",\"PC\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "7d79cc35-691a-4711-84d0-2912fadec324",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -305,6 +315,19 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6a803d26-516f-440a-bc43-fe9fec646b70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for solver in solverList:\n",
+    "    print(type(solver))\n",
+    "    print(solver.t)\n",
+    "    print(\"{:05b}\".format(solver.stop_flag))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "055b4c62-c836-469f-b958-a0c78a95ae3b",
    "metadata": {},
    "outputs": [],
    "source": []
