--- a/MulticastPackingResults.ipynb
+++ b/MulticastPackingResults.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "id": "f7aad346-bc1b-46eb-91af-8381dfcbd544",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -102,10 +103,43 @@
    "cell_type": "markdown",
    "id": "4ec470be-3fa7-4c7e-915e-41b926677274",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
     "# Get Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53a2f666-315c-4496-867f-b9858219fe16",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## Read all data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c501673f-bc41-4f8f-9483-57875429bf95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def all_data():\n",
+    "    import os\n",
+    "    import glob\n",
+    "    return pd.concat(map(pd.read_csv, glob.glob(os.path.join('', \"outputs/*.csv\"))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f4ce231-e248-49a9-a022-b33ff879efae",
+   "metadata": {},
+   "source": [
+    "## Get single run"
    ]
   },
   {
@@ -117,15 +151,17 @@
    },
    "outputs": [],
    "source": [
-    "datetime_str = \"2022-06-14_15_48\"\n",
+    "datetime_str = \"2022-07-12_00_17\"\n",
     "results = pd.read_csv(\"outputs/{}.csv\".format(datetime_str))\n",
-    "#print(results)"
+    "#results = all_data()\n",
+    "print(results)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "5fb799c5-57ca-46d6-8961-96031565cdbb",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -143,8 +179,8 @@
    "source": [
     "cg2Results = results[(results[\"Solver\"] == \"CG\") \n",
     "                     & (results[\"Block Apx Ratio\"] == 2)][[\n",
-    "                        #\"Vertices\",\n",
-    "                        #\"Edges\",\n",
+    "                        \"Vertices\",\n",
+    "                        \"Edges\",\n",
     "                        \"Requests\",\n",
     "                        \"Group Size\",\n",
     "                        \"Congestion\", \n",
@@ -165,8 +201,29 @@
    "source": [
     "cg1Results = results[(results[\"Solver\"] == \"CG\") \n",
     "                     & (results[\"Block Apx Ratio\"] == 1)][[\n",
-    "                        #\"Vertices\",\n",
-    "                        #\"Edges\",\n",
+    "                        \"Vertices\",\n",
+    "                        \"Edges\",\n",
+    "                        \"Requests\",\n",
+    "                        \"Group Size\",\n",
+    "                        \"Congestion\", \n",
+    "                        \"Iterations\",\n",
+    "                        \"Avg. Time/It\",\n",
+    "                        \"Total Time\",\n",
+    "                        \"Stop Flags\"\n",
+    "                ]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c73deb9-6938-47cf-9fec-dc0b21a407d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc1Results = results[(results[\"Solver\"] == \"PC\") \n",
+    "                     & (results[\"Block Apx Ratio\"] == 1)][[\n",
+    "                        \"Vertices\",\n",
+    "                        \"Edges\",\n",
     "                        \"Requests\",\n",
     "                        \"Group Size\",\n",
     "                        \"Congestion\", \n",
@@ -187,7 +244,52 @@
    "outputs": [],
    "source": [
     "print(cg2Results)\n",
-    "print(cg1Results)"
+    "print(cg1Results)\n",
+    "#print(pc1Results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "698d03ed-b7ad-4950-88eb-543892925fb0",
+   "metadata": {},
+   "source": [
+    "## _____ vs Instance Size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aaa6e153-090c-47a7-bebf-acaff8497c5f",
+   "metadata": {},
+   "source": [
+    "### Congestion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55a01ac9-b1a1-470e-a8ee-3662cf9343eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.set_index(\"Vertices\").groupby(\"Block Apx Ratio\")[\"Congestion\"].plot(legend=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f648887-aa5d-403f-9bf0-2bbaffd652fd",
+   "metadata": {},
+   "source": [
+    "### Iterations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f24ae6dc-7ee7-4f04-990d-ef94b6465740",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.set_index(\"Vertices\").groupby(\"Block Apx Ratio\")[\"Iterations\"].plot(legend=True)"
    ]
   },
   {
@@ -412,79 +514,6 @@
     "#         groupSizeResults[\"Requests\"].iloc[0]\n",
     "#         ),\n",
     "#     ylabel=\"Total Time (s)\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0fe438e2-9182-473b-b48d-9bd81fa2fe55",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
-   "source": [
-    "## May 3rd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca710805-b81b-4f64-a44b-24a27abb5a72",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oldresults = pd.read_csv(\"outputs/2022-05-03_13_43.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c33ea1e1-b4fe-4955-9c2f-35c072b2a0b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cg2Results = oldresults[(oldresults[\"Solver\"] == \"CG\") & (oldresults[\"Block Apx Ratio\"] == 2)][[\n",
-    "                     \"Vertices\",\n",
-    "                     \"Edges\",\n",
-    "                     \"Congestion\", \n",
-    "                     \"Iterations\",\n",
-    "                     \"Total Time\",\n",
-    "                ]]\n",
-    "jz2Results = oldresults[(oldresults[\"Solver\"] == \"JZ\") & (oldresults[\"Block Apx Ratio\"] == 2)][[\n",
-    "                     \"Vertices\",\n",
-    "                     \"Edges\",\n",
-    "                     \"Congestion\", \n",
-    "                     \"Iterations\",\n",
-    "                     \"Total Time\",\n",
-    "                ]]\n",
-    "cg1Results = oldresults[(oldresults[\"Solver\"] == \"CG\") & (oldresults[\"Block Apx Ratio\"] == 1)][[\n",
-    "                     \"Vertices\",\n",
-    "                     \"Edges\",\n",
-    "                     \"Congestion\", \n",
-    "                     \"Iterations\",\n",
-    "                     \"Total Time\",\n",
-    "                ]]\n",
-    "ip1Results = oldresults[(oldresults[\"Solver\"] == \"IP\") & (oldresults[\"Block Apx Ratio\"] == 1)][[\n",
-    "                     \"Vertices\",\n",
-    "                     \"Edges\",\n",
-    "                     \"Congestion\", \n",
-    "                     \"Iterations\",\n",
-    "                     \"Total Time\",\n",
-    "                ]]\n",
-    "display(cg2Results.sort_values(by=\"Vertices\"))\n",
-    "display(jz2Results.sort_values(by=\"Vertices\"))\n",
-    "display(cg1Results.sort_values(by=\"Vertices\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3528d2d0-0c26-4d88-a9cd-61c3532d5767",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sparsity_df = oldresults[oldresults[\"Vertices\"] == 50]\n",
-    "sparsity_df = sparsity_df.pivot(index=\"Edges\", columns=[\"Solver\", \"Block Apx Ratio\"], values=\"Iterations\")\n",
-    "sparsity_df.plot()"
    ]
   },
   {
